feat :lipstick: se añade funcion de dot en la plantilla de movies
usando javascript para permitir la fucnioalidad de los botones

--- a/src/views/home_cine.html
+++ b/src/views/home_cine.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Movie E-commerce</title>
     <link rel="stylesheet" href="../css/home_cine.css">
+    <script type="module" defer src="../js/home_cine.js"></script>
 </head>
 <body>
     <header class="header">
@@ -56,9 +57,10 @@
             </div>
         </div>
         <div class="carousel-indicators">
-            <span class="dot active"></span>
-            <span class="dot"></span>
-            <span class="dot"></span>
+            <span class="dot active" data-index="0" aria-label="Slide 1"></span>
+            <span class="dot" data-index="1" aria-label="Slide 2"></span>
+            <span class="dot" data-index="2" aria-label="Slide 3"></span>
+
         </div>
     </section>
 
@@ -109,6 +111,6 @@
                 </a>
             </div>
         </nav>
-    </footer>
+    </footer>  
 </body>
 </html>
