--- a/src/css/home_cine.css
+++ b/src/css/home_cine.css
@@ -122,15 +122,14 @@ body {
     gap: 20px;
     overflow-x: auto; 
     width: 100%;
-    max-width: 1500px;
+    max-width: 1900px;
     scroll-snap-type: x mandatory; 
 }
 
 .movie-item {
-    flex: 0 0 250px;
-    height: 500px;
-    text-align: center;
-    scroll-snap-align: start; 
+    flex: 0 0 25%;
+    scroll-snap-align: start;
+    box-sizing: border-box;
 }
 
 
@@ -150,24 +149,26 @@ body {
     font-size: 14px;
 }
 
-/* Indicadores del carrusel */
 .carousel-indicators {
-    text-align: center;
+    display: flex;
+    justify-content: center;
     margin-top: 10px;
 }
-
 .dot {
-    display: inline-block;
-    height: 10px;
+    cursor: pointer;
+    padding: 5px;
+    margin: 5px;
     width: 10px;
-    margin: 0 5px;
-    background-color: #bbb;
+    height: 10px;
+    background-color: gray;
     border-radius: 50%;
+    display: inline-block;
 }
 
 .dot.active {
-    background-color: rgb(0, 211, 176);
+    background-color: rgb(152, 3, 3);
 }
+
 
 .footer {
     background-color: #000;
