chore :lipstick: se crea redireccion de los botones para la siguente pagina
usando a href

--- a/src/views/choose_seat.html
+++ b/src/views/choose_seat.html
@@ -132,8 +132,11 @@
         </section>
 
         <section class="purchase">
-            <div class="price">Price <span>$24,99</span></div>
-            <button class="buy-ticket">Buy ticket</button>
+            <div class="price">Price <span>$24,99</span>
+            </div>
+            <a href="../views/oder_summary.html">
+                <button class="buy-ticket">Buy ticket</button>
+            </a>
         </section>
     </main>
 </body>
