--- a/src/views/cinema_selection.html
+++ b/src/views/cinema_selection.html
@@ -95,9 +95,12 @@
             </div>
         </section>
         
-        <div class="book-now">
-            <span>Book Now</span>
-        </div>
+        <a href="../views/choose_seat.html">
+            <div class="book-now">
+                <span>Book Now</span>
+            </div>
+        </a>
+        
     </main>
 </body>
 </html>
