chore :lipstick: se crea el boton para redirigir a la plantilla de tickets

--- a/src/views/oder_summary.html
+++ b/src/views/oder_summary.html
@@ -76,12 +76,13 @@
                 <p class="payment-timer">Complete your payment in <span class="timer">04:59</span></p>
             </div>
         </section>
-
-        <section class="purchase">
-            <button class="buy-ticket">Buy Ticket</button>
-        </section>
+        <a href="../views/ticket.html">
+            <section class="purchase">
+                <button class="buy-ticket">Buy Ticket</button>
+            </section>
+        </a>
+        
     </main>
 
-    <script src="../js/payment.js"></script>
 </body>
 </html>
