chore :lipstick: se añade boton de redirecion en la pelicula
el boton es temporal

--- a/src/views/home_cine.html
+++ b/src/views/home_cine.html
@@ -36,9 +36,12 @@
                 <p class="movie-genre">Adventure</p>
             </div>
             <div class="movie-item">
-                <img src="../storage/img/alien.jpg">
-                <p class="movie-title">Alien Romulus</p>
-                <p class="movie-genre">Adventure</p>
+                <a href="../views/cinema_selection.html">
+                    <img src="../storage/img/alien.jpg">
+                    <p class="movie-title">Alien Romulus</p>
+                    <p class="movie-genre">Adventure</p>
+                </a>
+               
             </div>
             <div class="movie-item">
                 <img src="../storage/img/cartel-bad-boys-.jpg">
