--- a/src/views/choose_seat.html
+++ b/src/views/choose_seat.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Choose Seat</title>
     <link rel="stylesheet" href="../css/choose_seat.css">
+    <script type="module" src="../js/choose_seat.js"></script>
 </head>
 <body>
     <header class="header">
@@ -53,7 +54,7 @@
                 <div class="seat reserved"></div>
                 <div class="seat reserved"></div>
                 <div class="seat reserved"></div>
-                <div class="seat selected"></div>
+                <div class="seat reserved"></div>
                 <div class="seat reserved"></div>
                 <div class="seat reserved"></div>
                 <div class="seat reserved"></div>
@@ -123,7 +124,7 @@
 
             </div>
             <div class="times">
-                <button class="time selected">13:00 <span>$ 5.25</span> - 3D</button>
+                <button class="time">13:00 <span>$ 5.25</span> - 3D</button>
                 <button class="time">15:45 <span>$ 5.99</span> - 3D</button>
                 <button class="time">18:50 <span>$ 6.50</span> - 3D</button>
                 <button class="time">18:50 <span>$ 6.50</span> - 3D</button>
@@ -132,7 +133,7 @@
         </section>
 
         <section class="purchase">
-            <div class="price">Price <span>$24,99</span>
+            <div class="price">Price <span>$00,0</span>
             </div>
             <a href="../views/oder_summary.html">
                 <button class="buy-ticket">Buy ticket</button>
