--- a/src/views/cinema_selection.html
+++ b/src/views/cinema_selection.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Cinema Selection</title>
     <link rel="stylesheet" href="../css/cinema_selection.css">
+    <script type="module" defer src="../js/cinema_selection.js"></script>
 </head>
 <body>
     <header class="header">
