--- a/src/css/cinema_selection.css
+++ b/src/css/cinema_selection.css
@@ -138,6 +138,10 @@ body {
 
     color: white;
 }
+.selected {
+    border: 2px solid #ff0000;
+    background-color: rgba(255, 0, 0, 0.1);
+}
 
 .cinema {
     display: flex;
