--- a/src/views/create_account.html
+++ b/src/views/create_account.html
@@ -10,7 +10,7 @@
 </head>
 <body>
   <div class="container">
-    <img class="estrella" src="../storage/img/Star 8.svg" alt="Estrella">
+    <img class="ojitos" src="../storage/img/ojitos.svg" alt="ojitos">
     <a href="/">
       <img class="retroceso" src="../storage/img/Back.svg" alt="Retroceder">
     </a>
