--- a/src/css/style.css
+++ b/src/css/style.css
@@ -37,31 +37,31 @@
   
   .container_image {
     display: grid;
-    width: 100%;
-    height: 60vh; 
+    width: 400px;
+    height: 300px; 
     justify-content: center;
     align-items: center;
     overflow: hidden;
   }
   
   .container_image img {
-    width: 100%;
-    height: 50%;
-    object-fit: cover;
-    animation: zoomFade 3s ;
+    width: 280px;
+    height: 80px;
   }
-  
-  @keyframes zoomFade {
-    0% {
-      transform: scale(1) rotate(0deg);
-      opacity: 1;
-    }
-    100% {
-      transform: scale(1) rotate(360deg);
-      opacity: 1;
-    }
+
+  .container_image h1{
+    margin-top: 10px;
+    color: white;
+    font-size: 50px;
   }
-  
+  .container_image h2{
+    color: white;
+    margin-top: 10px;
+    font-size: 40px;
+  }
+  .container_image h3{
+    color: white;
+  }
 
   .content-container {
     width: 30%; 
@@ -77,13 +77,7 @@
     flex-direction: column;
     align-items: center;
     text-align: center;
-    margin-bottom: 2rem;
-  }
-  
-  h1 {
-    font-size: 3rem;
-    margin-bottom: 1rem;
-    color: white;
+    margin-bottom: 5rem;
   }
   
   p {
