--- a/src/views/home_cine.html
+++ b/src/views/home_cine.html
@@ -20,74 +20,37 @@
             </div>
         </div>
     </header>
+    
     <section class="search-section">
         <input type="text" class="search-bar" placeholder="Search movie, cinema, genre...">
         <img src="../storage/img/Vector (2).svg" class="search-icon">
     </section>
+
     <section class="now-playing">
         <div class="section-header">
             <h3>Now playing</h3>
             <a href="#" class="see-all">See all</a>
         </div>
         <div class="movie-carousel">
-            <div class="movie-item">
-                <img src="../storage/img/mi_villano.jpg">
-                <p class="movie-title">El gato con botas</p>
-                <p class="movie-genre">Adventure</p>
-            </div>
-            <div class="movie-item">
-                <img src="../storage/img/alien.jpg">
-                <p class="movie-title">Alien Romulus</p>
-                <p class="movie-genre">Adventure</p>
-            </div>
-            <div class="movie-item">
-                <img src="../storage/img/cartel-bad-boys-.jpg">
-                <p class="movie-title">bad-boys</p>
-                <p class="movie-genre">Accion</p>
-            </div>
-            <div class="movie-item">
-                <img src="../storage/img/Garfield.jpg">
-                <p class="movie-title">Garfield</p>
-                <p class="movie-genre">Adventure</p>
-            </div>
-            <div class="movie-item">
-                <img src="../storage/img/guason.jpg">
-                <p class="movie-title">guason</p>
-                <p class="movie-genre">Accion</p>
-            </div>
+            <!-- Las películas se agregarán aquí dinámicamente -->
         </div>
         <div class="carousel-indicators">
             <span class="dot active" data-index="0" aria-label="Slide 1"></span>
             <span class="dot" data-index="1" aria-label="Slide 2"></span>
             <span class="dot" data-index="2" aria-label="Slide 3"></span>
-
         </div>
     </section>
-
+    
     <section class="coming-soon">
         <div class="section-header">
             <h3>Coming soon</h3>
             <a href="#" class="see-all">See all</a>
         </div>
         <div class="movie-carousel">
-            <div class="movie-item">
-                <img src="../storage/img/Rectangle 4170.jpg">
-                <p class="movie-title">Gato con botas(2023)</p>
-            </div>
-            <div class="movie-item">
-                <img src="../storage/img/oppenheimer.jpg">
-                <p class="movie-title">oppenheimer</p>
-            </div>
-            <div class="movie-item">
-                <img src="../storage/img/kill.jpg">
-                <p class="movie-title">Kill</p>
-            </div>
-            <div class="movie-item">
-                <img src="../storage/img/Rectangle 4170.jpg">
-                <p class="movie-title">Gato con botas</p>
-            </div>
+            <!-- Las películas se agregarán aquí dinámicamente -->
         </div>
     </section>
+
     <footer class="footer">
         <nav class="footer-nav">
             <div class="footer-item">
@@ -103,11 +66,6 @@
             <div class="footer-item">
                 <a href="#" class="footer-link">
                     <img src="../storage/img/Icon (5).svg" alt="Tickets">
-                </a>
-            </div>
-            <div class="footer-item">
-                <a href="#" class="footer-link">
-                    <img src="../storage/img/Profile (1).svg" alt="Profile">
                 </a>
             </div>
         </nav>
