--- a/src/views/cinema_selection.html
+++ b/src/views/cinema_selection.html
@@ -5,102 +5,66 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Cinema Selection</title>
     <link rel="stylesheet" href="../css/cinema_selection.css">
+    <script type="module" defer src="../js/cinema_selection.js"></script>
 </head>
 <body>
     <header class="header">
-        <a href="../views/home_cine.html">
+        <a href="/home_cine">
             <img id="back" src="../storage/img/Back.svg" alt="back icon">
         </a>
         <h1>Cinema Selection</h1>
         <div class="options">
             <img src="../storage/img/more-vertical.svg" alt="more icon">
         </div>
-        
     </header>
     <main class="main">
         <section class="main__section">
             <article class="article__movie">
                 <div class="movie__image">
-                    <img src="../storage/img/alien.jpg" alt="movie image">
+                    <img src="" alt="movie image"> <!-- Imagen se actualizará dinámicamente -->
                 </div>
             </article>
         </section>
-        
+
         <section id="main__section__title" class="main__section">
             <article class="article__detail">
                 <div class="detail__head">
-                    <h1>Puss in Boots: The Last Wish</h1>
-                    <span>Action, Adventure</span>
+                    <h1></h1> <!-- Este título se actualizará -->
+                    <span></span> <!-- Este género se actualizará -->
                     <div class="product__select">
                         <button>
                             <img src="../storage/img/Polygon 1.svg" alt="play icon">
                             <span>Watch Trailer</span>
                         </button>
                     </div>
-                    <p>
-                        Jake Sully and Ney'tiri have formed a family and are doing everything to stay together. However, they must leave their home and explore the regions of Pandora. When an ancient threat resurfaces, Jake must fight a difficult war against the humans.
-                    </p>
-                    
+                    <p></p> <!-- Esta sinopsis se actualizará -->
                 </div>
             </article>
         </section>
+        
         <section class="cast">
             <h1>Cast</h1>
             <div class="actors">
-                <div class="information_Actors">
-                    <img src="../storage/img/Antonio_banderas.svg" alt="Antonio_banderas">
-                    <div class="text-container">
-                        <p>Antonio Banderas</p>
-                        <span>Puss in Boots</span>
-                    </div>
-                </div>
-                <div class="information_Actors">
-                    <img src="../storage/img/salma.svg" alt="salma">
-                    <div class="text-container">
-                        <p>Salma Hayek</p>
-                        <span>Kitty Softpaws</span>
-                    </div>
-                </div>
-                <div class="information_Actors">
-                    <img src="../storage/img/hervy.svg" alt="Harvey">
-                    <div class="text-container">
-                        <p>Harvey Guillén</p>
-                        <span>Perro</span>
-                    </div>
-                </div>
-                <div class="information_Actors">
-                    <img src="../storage/img/hervy.svg" alt="Harvey">
-                    <div class="text-container">
-                        <p>Harvey Guillén</p>
-                        <span>Perro</span>
-                    </div>
-                </div>
+                <!-- Aquí se agregarán los actores si es necesario -->
             </div>
         </section>
+        
         <section class="cinema-selection">
             <h1>Cinema</h1>
             <div class="cinema">
                 <div class="cinema-name">
-                    Atrium Cinemas
-                    <span>Staff Lines, Saddar, Karachi</span>
+                    Auditorio Campus
+                    <span>una de las mejores peliculas de la saga Alien</span>
                 </div>
                 <img src="../storage/img/3D.jpg" alt="cinema logo">
-            </div>
-            <div class="cinema">
-                <div class="cinema-name">
-                    Nueplex
-                    <span>Khayaban-e-Shaheen, DHA Phase 8</span>
-                </div>
-                <img src="../storage/img/nueplex.jpg" alt="cinema logo">
-            </div>
+            </div>           
         </section>
         
-        <a href="../views/choose_seat.html">
+        <a href="/choose_seat">
             <div class="book-now">
                 <span>Book Now</span>
             </div>
         </a>
-        
     </main>
 </body>
 </html>
