--- a/src/views/log_in.html
+++ b/src/views/log_in.html
@@ -58,7 +58,9 @@
     </div>
     <div class="footer">
       <p>Don’t have an account?</p><br>
+    <a href="./create_account">
       <p class="sign_up">Sign up</p>
+    </a>
     </div>
   </div>
 </body>
