chore :lipstick: se ajustan las rutas de el cine campus para el servidor
modificando las rutas añadiendolas a el archivo principal, ademas acutalize el ticket creandole un archivo javascript para la validacion del codigo QR, y quitandolo de la plantilla html

--- a/src/views/choose_seat.html
+++ b/src/views/choose_seat.html
@@ -9,7 +9,7 @@
 </head>
 <body>
     <header class="header">
-        <a href="../views/cinema_selection.html">
+        <a href="/cinema_selection">
             <img id="back" src="../storage/img/Back.svg" alt="Back icon">
         </a>
         <h1>Choose Seat</h1>
@@ -135,7 +135,7 @@
         <section class="purchase">
             <div class="price">Price <span>$00,0</span>
             </div>
-            <a href="../views/oder_summary.html">
+            <a href="/oder_summary">
                 <button class="buy-ticket">Buy ticket</button>
             </a>
         </section>
