--- a/src/views/cinema_selection.html
+++ b/src/views/cinema_selection.html
@@ -9,7 +9,7 @@
 </head>
 <body>
     <header class="header">
-        <a href="../views/home_cine.html">
+        <a href="/home_cine">
             <img id="back" src="../storage/img/Back.svg" alt="back icon">
         </a>
         <h1>Cinema Selection</h1>
@@ -82,21 +82,13 @@
             <h1>Cinema</h1>
             <div class="cinema">
                 <div class="cinema-name">
-                    Atrium Cinemas
-                    <span>Staff Lines, Saddar, Karachi</span>
+                    Auditorio Campus
+                    <span>una de las mejores peliculas de la saga Alien</span>
                 </div>
                 <img src="../storage/img/3D.jpg" alt="cinema logo">
-            </div>
-            <div class="cinema">
-                <div class="cinema-name">
-                    Nueplex
-                    <span>Khayaban-e-Shaheen, DHA Phase 8</span>
-                </div>
-                <img src="../storage/img/nueplex.jpg" alt="cinema logo">
-            </div>
+            </div>           
         </section>
-        
-        <a href="../views/choose_seat.html">
+        <a href="/choose_seat">
             <div class="book-now">
                 <span>Book Now</span>
             </div>
