--- a/src/views/home_cine.html
+++ b/src/views/home_cine.html
@@ -36,7 +36,7 @@
                 <p class="movie-genre">Adventure</p>
             </div>
             <div class="movie-item">
-                <a href="../views/cinema_selection.html">
+                <a href="/cinema_selection">
                     <img src="../storage/img/alien.jpg">
                 </a>
                     <p class="movie-title">Alien Romulus</p>
