--- a/src/views/oder_summary.html
+++ b/src/views/oder_summary.html
@@ -9,7 +9,7 @@
 </head>
 <body>
     <header class="header">
-        <a href="../views/choose_seat.html">
+        <a href="/choose_seat">
             <img id="back" src="../storage/img/Back.svg" alt="Back icon">
         </a>
         <h1>Order Summary</h1>
@@ -24,7 +24,7 @@
             <div class="movie-details">
                 <h2>Alien Romulus</h2>
                 <p>Accion</p>
-                <p><strong>HARTONO MALL</strong></p>
+                <p><strong>Auditorio Campus</strong></p>
                 <p>Sun, 12 Feb 2023. 13:00</p>
             </div>
         </section>
@@ -76,7 +76,7 @@
                 <p class="payment-timer">Complete your payment in <span class="timer">04:59</span></p>
             </div>
         </section>
-        <a href="../views/ticket.html">
+        <a href="/ticket">
             <section class="purchase">
                 <button class="buy-ticket">Buy Ticket</button>
             </section>
