chore :lipstick: se ajustan las peliculas segun los datos de la base de datos
importando las imagenes y cambiando los nombres de las pelicuas y generos

--- a/src/views/home_cine.html
+++ b/src/views/home_cine.html
@@ -31,31 +31,31 @@
         </div>
         <div class="movie-carousel">
             <div class="movie-item">
-                <img src="../storage/img/mi_villano.jpg">
-                <p class="movie-title">El gato con botas</p>
-                <p class="movie-genre">Adventure</p>
+                <img src="../storage/img/Wish-cartel.webp">
+                <p class="movie-title">Wish</p>
+                <p class="movie-genre">Animación, Comedia Musical</p>
             </div>
             <div class="movie-item">
                 <a href="/cinema_selection">
                     <img src="../storage/img/alien.jpg">
                 </a>
                     <p class="movie-title">Alien Romulus</p>
-                    <p class="movie-genre">Adventure</p>
+                    <p class="movie-genre">Ciencia Ficción, Horror</p>
             </div>
             <div class="movie-item">
-                <img src="../storage/img/cartel-bad-boys-.jpg">
-                <p class="movie-title">bad-boys</p>
-                <p class="movie-genre">Accion</p>
+                <img src="../storage/img/2385575.webp">
+                <p class="movie-title">Dune: Part Two</p>
+                <p class="movie-genre">Ciencia Ficción</p>
             </div>
             <div class="movie-item">
                 <img src="../storage/img/Garfield.jpg">
                 <p class="movie-title">Garfield</p>
-                <p class="movie-genre">Adventure</p>
+                <p class="movie-genre">Comedia, Familiar</p>
             </div>
             <div class="movie-item">
                 <img src="../storage/img/guason.jpg">
-                <p class="movie-title">guason</p>
-                <p class="movie-genre">Accion</p>
+                <p class="movie-title">Joker: Folie à Deux</p>
+                <p class="movie-genre">Crimen, Thriller</p>
             </div>
         </div>
         <div class="carousel-indicators">
@@ -78,15 +78,15 @@
             </div>
             <div class="movie-item">
                 <img src="../storage/img/oppenheimer.jpg">
-                <p class="movie-title">oppenheimer</p>
+                <p class="movie-title">Oppenheimer</p>
             </div>
             <div class="movie-item">
                 <img src="../storage/img/kill.jpg">
                 <p class="movie-title">Kill</p>
             </div>
             <div class="movie-item">
-                <img src="../storage/img/Rectangle 4170.jpg">
-                <p class="movie-title">Gato con botas</p>
+                <img src="../storage/img/the-marvels-poster-internacional.jpg">
+                <p class="movie-title">The Marvels</p>
             </div>
         </div>
     </section>
